<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/landingFragment">

    <fragment
        android:id="@+id/landingFragment"
        android:name="uk.co.brightman.mycarbonfoodprint.LandingFragment"
        android:label="@string/landing_page_label"
        tools:layout="@layout/fragment_landing">
        <action
            android:id="@+id/action_landingFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@+id/landingFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_landingFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
        <action
            android:id="@+id/action_landingFragment_to_mealFragment"
            app:destination="@id/mealSelectionFragment" />
        <action
            android:id="@+id/action_landingFragment_to_mealEditFragment"
            app:destination="@id/mealEditFragment" />
        <action
            android:id="@+id/action_landingFragment_to_goalFragment"
            app:destination="@id/goalFragment" />
        <action
            android:id="@+id/action_landingFragment_to_myDayFragment"
            app:destination="@id/myDayFragment" />
    </fragment>


    <fragment
        android:id="@+id/aboutFragment"
        android:name="uk.co.brightman.mycarbonfoodprint.AboutFragment"
        android:label="@string/about_label"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/mealSelectionFragment"
        android:name="uk.co.brightman.mycarbonfoodprint.meal.MealSelectionFragment"
        android:label="@string/meal_selection_label"
        tools:layout="@layout/fragment_meal_selection">
        <action
            android:id="@+id/action_mealSelectionFragment_to_mealEditFragment"
            app:destination="@id/mealEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/myDayFragment"
        android:name="uk.co.brightman.mycarbonfoodprint.MyDayFragment"
        android:label="@string/my_day_label"
        tools:layout="@layout/fragment_my_day" />

    <fragment
        android:id="@+id/goalFragment"
        android:name="uk.co.brightman.mycarbonfoodprint.GoalFragment"
        android:label="@string/goal_label"
        tools:layout="@layout/fragment_goal" />

    <fragment
        android:id="@+id/mealEditFragment"
        android:name="uk.co.brightman.mycarbonfoodprint.meal.MealEditFragment"
        android:label="@string/meal_edit_label"
        tools:layout="@layout/fragment_meal_edit" />

    <fragment
        android:id="@+id/loginFragment"
        android:name="uk.co.brightman.mycarbonfoodprint.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_landingFragment"
            app:destination="@id/landingFragment" />
    </fragment>
</navigation>